fixed the column spacing in tables

--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -158,6 +158,9 @@ code {
   border-top: 1px solid #AAA;
   background-color: rgba(255,255,255,0.82);
   text-align: center;
+width: 25%;
+padding-right: 10%;
+padding-left: 10%;
 }
 #content table th {
   color: #992B2B;
